--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ lib
 ios-sdk.xcodeproj/xcuserdata
 src
 build
+**/xcshareddata
 ios-sdk.xcodeproj/project.xcworkspace/xcuserdata
 ios-sdk.xcworkspace/xcuserdata
